[package]
name = "libpsudoc"
version = "0.1.0"
authors = ["The PSudo Compiler Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "100.1.1"
num-traits = "0.2.12"
num-bigint = "0.3.0"
lazy_static = "1.4.0"
