[package]
name = "psudoc"
version = "0.1.0"
authors = ["The PSudo Compiler Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpsudoc = { path = "../libpsudoc" } 
colored = "1.8.0"
unicode-width = "0.1.6"
structopt = "0.3.2"
lazy_static = "1.4.0"

[dependencies.syntect]
version = "3.2.1"
features = ["parsing", "yaml-load"]
