[package]
name = "psudoc"
version = "0.1.0"
authors = ["The PSudo Compiler Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpsudoc = { path = "../libpsudoc" } 
colored = "2.0.0"
unicode-width = "0.1.8"
structopt = "0.3.20"
lazy_static = "1.4.0"

[dependencies.syntect]
version = "4.5.0"
features = ["parsing", "yaml-load"]
